<resources>

    <string name="nombreApplicationSplash">TECH WAY</string>
    <string name="firmaSplash">Johan Rojas</string>
    <string name="descripcionHome">Inicia una nueva aventura con Tech Way y descubre una nueva forma de ver el mundo</string>
    <string name="hello_world">¡Hola Mundo!</string>
    <string name="descripcionLogin">la aventura esta por iniciar , por favor inicia sesion</string>
    <string name="textoCampoCorreo">Correo electronico</string>
    <string name="campoContra">Contraseña</string>
    <string name="textoBotonHome">Comienza</string>
    <string name="registrateHome">Registrate</string>
    <string name="textoBotonLogin">Ingresar</string>
    <string name="recuperaTuPassword">Recupera tu contraseña</string>
    <string name="registratelogin">Registrate</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="ingresa_con_google">Ingresa con Google</string>
    <string name="tituloRegistro">Registro</string>
    <string name="campoNombreRegistro">Nombres</string>
    <string name="campoApellidosRegistro">Apellidos</string>
    <string name="campoCorreoRegistro">Correo electronico</string>
    <string name="campoContraRegistro">Contraseña</string>
    <string name="campoRepetirContra">Repetir contraseña</string>
    <string name="botonRegistrate">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesion_registro">Inicia sesión</string>
    <string name="terminos_condiciones">Acepto los terminos y condiciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mi_tienda">Mi Tienda</string>
    <string name="inicio">Inicio</string>
    <string name="catalogo">catalogo</string>
    <string name="home">Home</string>
    <string name="catalogom">Catalogo</string>
    <string name="carrito_de_compras">Carrito De Compras</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="navigation_drawer_open">Menu Abierto</string>
    <string name="navigation_drawer_close">Menu Cerrado</string>
    <string name="productos_destacados">Productos destacados</string>
    <string name="imagendelproducto">imagenDelProducto</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="catalogo_fragment">CATALOGO</string>
    <string name="carrito_de_compras_f">Carrito De Compras</string>
    <string name="mi_perfil_f">Mi Perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos_hint_edit">Apellidos</string>
    <string name="correo_electronico_hint_edit">Correo electrónico</string>
    <string name="nueva_contra">Nueva contraseña</string>
    <string name="repetir_nueva_contra">Repetir nueva contraseña</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="editar_perfil_edit">Editar Perfil</string>
    <string name="ingresa_con_la_huella">ingresa con la huella</string>
    <string name="cerrar_sesion">cerrar sesion</string>
    <string name="crear_productos">crear productos</string>
    <string name="crear_empleados">crear empleados</string>
    <string name="crear_usuarios">crear usuarios</string>
    <string name="foto_de_perfil">foto_de_perfil</string>
    <string name="editar_perfil2">Editar perfil</string>
    <string name="cambiar_foto">cambiar foto</string>
    <string name="foto_de_perfil_1">Foto de perfil</string>
    <string name="apellidos_ed_perfil">Apellidos</string>
    <string name="correo">correo_editar_perfil</string>
    <string name="correo_ep">Correo</string>
    <string name="nueva_contra_ep">Nueva contraseña</string>
    <string name="repetir_nueva_contra_ep">Repetir nueva contraseña</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="ingresa_los_datos_del_nuevo_usuario">Ingresa los datos del nuevo usuario</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="ej">Ej. Juan García</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="ejemplo_correo_com">ejemplo@correo.com</string>
    <string name="rol">Rol</string>
    <string name="contrase_a">Contraseña</string>
    <string name="rt">••••••••</string>
    <string name="crear_usuario2">Crear usuario</string>
    <string name="categor_a">Categoría</string>
    <string name="descripci_n">Descripción</string>
    <string name="escribe_una_descripci_n_del_producto">Escribe una descripción del producto...</string>
    <string name="crear_producto">Crear producto</string>

</resources>