<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoApplication"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Activities.SplashActivity">

    <ImageView
        android:id="@+id/imagenHome"
        android:layout_width="281dp"
        android:layout_height="230dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_app" />

    <TextView
        android:id="@+id/tituloRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/tiro_bangla_italic"
        android:text="@string/nombreApplicationSplash"
        android:textColor="@color/colorLetraSplash"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descripcionLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/tiro_bangla_italic"
        android:text="@string/descripcionHome"
        android:textColor="@color/colorLetraDescripcionHome"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/botonHome"
        android:layout_width="288dp"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:text="@string/textoBotonHome"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registrateHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/tiro_bangla_italic"
        android:text="@string/registrateHome"
        android:textColor="@color/aguamarina"
        android:textSize="33sp"
        android:textStyle="bold" />




</LinearLayout>