<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoApplication"
    tools:context=".Activities.LoginActivity">


    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="137dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/logo_app" />

    <TextView
        android:id="@+id/nombreAppHome"
        android:layout_width="263dp"
        android:layout_height="51dp"
        android:fontFamily="@font/tiro_bangla_italic"
        android:text="@string/nombreApplicationSplash"
        android:textAlignment="center"
        android:textColor="@color/colorLetraSplash"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/descripcionLogin"
        android:layout_width="338dp"
        android:layout_height="74dp"
        android:fontFamily="@font/tiro_bangla_italic"
        android:text="@string/descripcionLogin"
        android:textAlignment="center"
        android:textColor="@color/colorLetraDescripcionHome"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <ImageView
        android:id="@+id/sesionimaen"
        android:layout_width="112dp"
        android:layout_height="174dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472"
        app:srcCompat="@drawable/perfil_contra" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:background="@drawable/style_edit_text"
        android:ems="10"
        android:hint="@string/textoCampoNombre"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorhint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <EditText
        android:id="@+id/et_contra"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:background="@drawable/style_edit_text"
        android:ems="10"
        android:hint="@string/campoContra"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorhint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="288dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/white"
        android:text="@string/textoBotonLogin"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/textoRecuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tiro_bangla_italic"
        android:text="@string/recuperaTuPassword"
        android:textColor="@color/aguamarina"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/registrateLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tiro_bangla_italic"
        android:text="@string/registratelogin"
        android:textColor="@color/aguamarina"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <TextView
        android:id="@+id/noTienesCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tiro_bangla_italic"
        android:text="@string/no_tienes_cuenta"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <Button
        android:id="@+id/ingresaConGoogle"
        android:layout_width="355dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/white"
        android:text="@string/ingresa_con_google"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="55dp"
        android:layout_height="44dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="599dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/google_s" />


</androidx.constraintlayout.widget.ConstraintLayout>